lke/videos/bulk-encoder-deployment.yaml
# For situations where we need to re-encode everything in bulk, this can temporarily turned up.
# This uses a separate RabbitMQ queue ("bulk-encoding-tasks") to avoid interfering with the usual video encoding
# that happens when videos are uploaded.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-encoder-bulk
  labels:
    app: video-encoder-bulk
spec:
  replicas: 0
  selector:
    matchLabels:
      app: video-encoder-bulk
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: video-encoder-bulk
    spec:
      containers:
      - name: video-encoder
        image: docker.io/bkerby/map-rando-videos:latest
        imagePullPolicy: Always
        command: ["/bin/video-encoder"]
        resources:
          requests:
            cpu: 20m
            memory: 500M
          limits:
            memory: 500M
      volumes:
      - name: video-storage-secret
        secret:
          secretName: video-storage-secret
