lke/videos/encoder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-encoder
  labels:
    app: video-encoder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-encoder
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: video-encoder
    spec:
      containers:
      - name: video-encoder
        image: docker.io/bkerby/map-rando-videos:main
        imagePullPolicy: Always
        command: ["/bin/video-encoder"]
        resources:
          requests:
            cpu: 20m
            memory: 1G
          limits:
            memory: 1G
      volumes:
      - name: video-storage-secret
        secret:
          secretName: video-storage-secret
