lke/videos/trigger-encode-all.yaml
apiVersion: v1
kind: Pod
metadata:
  name: trigger-encode-all
spec:
  containers:
  - name: trigger-encode-all
    image: docker.io/bkerby/map-rando-videos:main
    imagePullPolicy: Always
    command: ["/app/trigger-encode-all"]
    resources:
      requests:
        cpu: 20m
        memory: 100M
      limits:
        memory: 100M
  restartPolicy: Never
