lke/videos/videos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videos
  labels:
    app: videos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: videos
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: videos
    spec:
      containers:
      - name: videos
        image: docker.io/bkerby/map-rando-videos:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 20m
            memory: 500M
          limits:
            memory: 500M
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: video-storage-secret
        secret:
          secretName: video-storage-secret
