lke/videos/sm-json-data-updater-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-json-data-updater-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - videos.maprando.com
    secretName: maprando-com-tls
  rules:
  - host: videos.maprando.com
    http:
      paths:
      - path: "/sm-json-data-updater(/|$)(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: sm-json-data-updater
            port:
              number: 8082
