lke/videos/videos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: videos-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - videos.maprando.com
    secretName: maprando-com-tls
  rules:
  - host: videos.maprando.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: videos
            port:
              number: 80
